Fixing Persistent Scrollbar Issue

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #e4dcd3;
+  background-color: #ddd;
 }
 
 .clickBlocker{
