--- a/frontend/src/screens/Home/style.css
+++ b/frontend/src/screens/Home/style.css
@@ -12,7 +12,8 @@
 }
 
 .currentUser{
-  background-color: white;
+  background-color: #ff5d51;
+  color: rgb(255, 255, 255);
   z-index: 2;
   width: 100%;
   height: 15vh;
@@ -59,12 +60,17 @@
   font-size: 2.5vh;
 }
 
+.contacts{
+  width: 100%;
+}
+
 .contactList {
   background-color: transparent;
   width: 100%;
   height: 85vh;
   z-index: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: none;
 }
 
 .contact:last-child{
@@ -74,7 +80,7 @@
 .contact {
   cursor: pointer;
   position: relative;
-  background-color: white;
+  background-color: #ffffff;
   display: grid;
   grid-template-columns: minmax(0, 20%) minmax(0, 80%);
   grid-template-rows: 100%;
